app/View/Themed/Default/webroot/css/src/base/_m-buttons.scss
/*******************************************************************************
 * Buttons
 *
 * See for bootstrap sass implementation: https://github.com/thomas-mcdonald/bootstrap-sass/blob/master/vendor/assets/stylesheets/bootstrap/_buttons.scss
 ******************************************************************************/

.btn, .btn-group, .btn-group .btn:first-child, .btn-group.open .dropdown-menu {
  @extend .c_all-radius;
  }

.btn {
  // reset hat input elements ususally take the whole form width
  width: auto;
  padding: 0.2em 1em;
  }

.btn-submit {
  background-color: $btnSubmitBackground;
  @include buttonBackground($btnSubmitBackgroundHighlight, $btnSubmitBackground, black, white);
}

.btn-preview {
  @extend .btn-small;
  background-color: $btnPreviewBackground;
  @include buttonBackground($btnPreviewBackgroundHighlight, $btnPreviewBackground, black, white);
}

.btn-edit {
  @extend .btn-small;
  }

.btn-icon-close:before {
  // fix for font-awesome icons in lists: li i.
  /*width: 0 !important;*/
  }

//back and top wide button start
// -------------------------------------
.btn-strip {
  height: 100%;
  position: absolute;
	}

.btn-strip-back {
  width: 15px;
  background-image: image-url("mix_back.png");
  border: $border_width solid $saito_gray_dark;
  background-color: $saito_gray_light;
  background-repeat: repeat-y;
	@extend .c_all-radius;
  &:active {
    background-color: $saito_gray_dark;
		}
  }

.btn-strip-top {
	width: 25px;
	text-align: center;
	margin: 4px 0px 0px -1px;
  }

.button_mod_panel {
	display: inline-block;
	vertical-align: middle;
  ul {
    /* !important: in inline_view on entries_index the tree ul stuff messes in */
    margin: 0 !important;
    padding: 0 !important;
    list-style-type: none; }
  }
.l-button_mod_panel-wrapper {
	// #57 fix mod button overlapped in inline-view
	position: absolute; display: inline-block;
	}

.btn-hf-center {
  width: 100px;
  display: inline-block;
  height: 20px;

  &:before, &:after {
    content: '\00A0';
    }
  }

/*******************************************************************************
 * Buttons Thread Tools
 ******************************************************************************/

.ico-threadTool {
	display: inline-block;
	margin-top: 1px;
	width: 13px;
	height: 13px;
}

